Atualização de menus e banco

--- a/pom.xml
+++ b/pom.xml
@@ -15,11 +15,24 @@
   </properties>
 
   <dependencies>
+  
     <dependency>
+    
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
+      
     </dependency>
+    
+     <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+	<dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.44</version>
+    </dependency>
+    
+    
+    
   </dependencies>
 </project>
